--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,7 @@ flutter:
   assets:
     - jsonfile/
     - assets/images/
-    - assets/images/
-    - assets/video2.mp4
+    - videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
